tests/errors/generic_null_to_nonnull_list_element.dang
# Null flowing through a generic function cannot satisfy a non-null list element
pub id(x: a): a { x }

pub result: [Int!]! = [id(null)]
